--- a/force-app/main/default/lwc/cv_MyResumeContainer/cv_MyResumeContainer.css
+++ b/force-app/main/default/lwc/cv_MyResumeContainer/cv_MyResumeContainer.css
@@ -2,8 +2,8 @@
     box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
  }
  .header_color{
-    background: #060b1b;
-    color: #7081b9;
+   background: #0e1e52;
+   color: #6e8cec;
  }
  @media print {
    div.resContentBlock {
