--- a/force-app/main/default/lwc/cv_MyResumeContainer/cv_MyResumeContainer.css
+++ b/force-app/main/default/lwc/cv_MyResumeContainer/cv_MyResumeContainer.css
@@ -1,10 +1,12 @@
 .wrapper{
     box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
  }
+
  .header_color{
-   background: #0e1e52;
-   color: #6e8cec;
- }
+    background: #043836;
+    color: #6e8cec;
+}
+
  @media print {
    div.resContentBlock {
      display:none;
