Experience data updated

--- a/force-app/main/default/lwc/cv_MyResumeExperience/cv_MyResumeExperience.css
+++ b/force-app/main/default/lwc/cv_MyResumeExperience/cv_MyResumeExperience.css
@@ -34,7 +34,7 @@
     position: absolute;
 }
 .workExp_individual{
-    color: #686f79;
+    color: #202b3a;
     font-size: 16px;
 }
 .workExp_individual:before{
